terraform/subnets.tf
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name                     = "letstype-public-a"
    "kubernetes.io/role/elb" = "1" # Crucial for public ALBs
  }
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name                     = "letstype-public-b"
    "kubernetes.io/role/elb" = "1" # Crucial for public ALBs
  }
}

resource "aws_subnet" "private_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.11.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name                              = "letstype-private-a"
    "kubernetes.io/role/internal-elb" = "1" # Crucial for internal cluster tracking
  }
}

resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.12.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name                              = "letstype-private-b"
    "kubernetes.io/role/internal-elb" = "1" # Crucial for internal cluster tracking
  }
}
