terraform/route-table.tf
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

}

resource "aws_route" "public" {

  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.igw.id

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

}

resource "aws_route" "private" {

  route_table_id = aws_route_table.private.id

  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.nat.id

}
